@@ -4,11 +4,25 @@ import argparse
 import sys
 
 
+class FullHelper(argparse.Action):
+    def __init__(self, option_strings, fullhelp, *args, **kwargs):
+        kwargs['nargs'] = 0
+        self._fullhelp = fullhelp
+        super(FullHelper, self).__init__(option_strings, *args, **kwargs)
+
+    def __call__(self, parser, namespace, values, option_string=None):
+        print(self._fullhelp)
+        parser.print_help()
+        setattr(namespace, self.dest, True)
+        parser.exit()
+
+
 class LoosOptions:
     """
         Parse command line options and implement common sets of options
         Implemented as a wrapper around argparse
     """
+
     def __init__(self, description, fullhelp=None):
         self.parser = argparse.ArgumentParser(description=description)
 
@@ -16,10 +30,9 @@ class LoosOptions:
             self.setFullhelp(fullhelp)
 
     def setFullhelp(self, fullhelp=None):
-        self.fullhelp = fullhelp
         self.parser.add_argument('--fullhelp',
-                                 action='store_true',
-                                 default=False)
+                                 action=FullHelper,
+                                 fullhelp=fullhelp)
 
     # Set up some default arguments
     def modelSelectionPositionalOptions(self):
@@ -30,17 +43,15 @@ class LoosOptions:
     # Set up some default arguments
     def modelSelectionOptions(self):
         self.parser.add_argument('-m', '--model',
-                                 help="Model file describing system contents",
-                                 required=True)
+                                 help="Model file describing system contents"
+                                 )
         self.parser.add_argument('--selection',
                                  help='Use this selection for computation',
-                                 required=True,
                                  default='all')
 
     def trajOptions(self):
         self.parser.add_argument('-t', '--traj',
                                  help='Filename of trajectory or trajectories',
-                                 required=True,
                                  nargs='+')
         self.parser.add_argument('-k', '--skip',
                                  help='Skip frames from the trajectory start',
